# Dinghy

./: .gitignore  .gitmodules  Dinghy.sln  README.md
Afterschool.Common/: Afterschool.Common.csproj  File.cs  Utils.cs
Afterschool.Common/Extensions/: DirectoryInfoExtensions.cs
Depot.SourceGenerator/: Depot.SourceGenerator.csproj  GeneratorEntry.cs
Depot.SourceGenerator/Properties/: launchSettings.json
Depot.SourceGenerator/src/: ColumnData.cs  DepotFileData.cs  DepotHandler.cs  DepotSourceGenerator.cs  LineData.cs  SheetData.cs  Utils.cs
Dinghy.Bootstrapper/: Dinghy.Bootstrapper.csproj  Program.cs  build.cmd  build.ps1  build.sh
Dinghy.Bootstrapper/builders/ref/: CMakeLists copy.txt  CMakeLists.txt  basic-lib-build.zig  sokol-ref-build.zig
Dinghy.Core/: .nuspec  Dinghy.Core.csproj
Dinghy.Core/data/: _cuenotes.md
Dinghy.Core/libs/: cute.dylib  sokol.dylib  sokol.lib  stb.dylib  stb.lib
Dinghy.Core/src/: Core.cs  NativeLibResolver.cs  NativeUtils.cs  Primitives.cs  Quick.cs
Dinghy.Docs/: _currentstructure.md  builtins.md  data description formats.md  dotnet releaser.md  ecs.md  fonts.md  how.md  ideas.md  lygia.md  marketing.md  networking.md  nuget.md  performance.md  resource pipelines.md  scriban.md  shaders.md  source generators.md
Dinghy.Docs/.obsidian/: workspace.json
Dinghy.Docs/dev/: bootstrapper.md  clangsharppinvokegenerator notes.md  manual adds.md  native interop notes.md
Dinghy.Docs/ui/: razor refs.md  sdf.md  yoga.md
Dinghy.Magic/Dinghy.Magic.Sample/: DDD.UbiquitousLanguageRegistry.txt  Dinghy.Magic.Sample.csproj  Examples.cs  Program.cs  SampleEntity.cs
Dinghy.Magic/Dinghy.Magic.Tests/: Dinghy.Magic.Tests.csproj  GeneratorEntryTests.cs  SampleIncrementalSourceGeneratorTests.cs  (+1 more)
Dinghy.Sandbox/: Dinghy.Sandbox.csproj  NativeLibResolver.cs  Program.cs
(+148 files in other folders)
